# XWrap

./: .clang-format  CMakeLists.txt  readme.md  xwrap.h
examples/: CMakeLists.txt  multiwindow.c  pong.c  simple.c  sliders.c
include/: xwrap.h
src/: main.c  xwrap.c
